--- a/5_forego/Dockerfile
+++ b/5_forego/Dockerfile
@@ -7,13 +7,13 @@ RUN apt-get update  \
                        build-essential \
  && rm -rf /var/lib/apt/lists/*
 
-ADD app.c /
-RUN gcc -o app app.c
-
 ADD https://github.com/jwilder/forego/releases/download/v0.16.1/forego /usr/local/bin/forego
 RUN chmod u+x /usr/local/bin/forego 
 
+ADD app.c /
+RUN gcc -o app app.c
+
 COPY     Procfile /
 
-CMD  ["forego", "start", "-r"]
+CMD  ["forego", "start"]
 
