--- a/7_foreman/Dockerfile
+++ b/7_foreman/Dockerfile
@@ -5,15 +5,15 @@ RUN apt-get update  \
  && apt-get -y upgrade  \
  && apt-get install -y psmisc  \
                        build-essential \
+                       ruby \
  && rm -rf /var/lib/apt/lists/*
 
-ADD https://github.com/jwilder/forego/releases/download/v0.16.1/forego /usr/local/bin/forego
-RUN chmod u+x /usr/local/bin/forego 
+RUN gem install foreman
 
 ADD app.c /
 RUN gcc -o app app.c
 
-COPY     Procfile /
+COPY Procfile /
 
-CMD  ["forego", "start", "-r"]
+CMD  ["foreman", "start"]
 
